# hachimi-redux

./: .gitignore  .hikerconf  AGENTS.md  Cargo.toml  MAINTENANCE.md  README-es_419.md  README-es_es.md  README-fr_fr.md  README-pt_br.md  README-pt_pt.md  README-zh_cn.md  README-zh_tw.md  README.md  build.rs  cliff.toml  deny.toml  skills-lock.json  typos.toml
.githooks/: commit-msg
apps/hachimi/: Cargo.toml
apps/hachimi/assets/locales/: en.yml  es-419.yml  es.yml  fil.yml  fr.yml  id.yml  pt-br.yml  pt-pt.yml  vi.yml  zh-cn.yml  zh-tw.yml
apps/hachimi/examples/: menu_preview.rs
apps/hachimi/src/core/: conflicts.rs  ipc.rs  mod.rs  scene_views.rs  updater.rs
apps/hachimi/src/core/gui/: control_center_mount.rs  control_center_tls.rs  debug.rs  dev_harness.rs  dioxus_bridge.rs  fonts.rs  frame.rs  game_ui.rs  instance.rs  menu.rs  mod.rs  notification.rs  overlays.rs  shell.rs  splash.rs  stub.rs  theme.rs  update_progress.rs  widgets.rs
apps/hachimi/src/core/gui/components/: buttons.rs  cards.rs  combos.rs  feedback.rs  mod.rs  sections.rs  tags.rs  toggles.rs  widgets.rs
apps/hachimi/src/core/gui/dioxus/: app.rs  context.rs  mod.rs  reactivity_tests.rs
apps/hachimi/src/core/gui/dioxus/tabs/: about.rs  gameplay.rs  general.rs  graphics.rs  hotkeys.rs  layout.rs  mod.rs  plugins.rs  training_tracker.rs  translations.rs
apps/hachimi/src/core/gui/tabs/: README.md  about_tab.rs  config.rs  gameplay.rs  general.rs  graphics.rs  hotkeys.rs  layout.rs  mod.rs  overlay_tab.rs  plugins.rs  translations.rs
apps/hachimi/src/core/gui/window/: config_editor.rs  first_time_setup.rs  hotkeys_editor.rs  mod.rs  simple_ok.rs  simple_yes_no.rs
apps/hachimi/src/core/hachimi/: config.rs  mod.rs
apps/hachimi/src/core/hosted_data/: cache.rs  client.rs  mod.rs  updater.rs
apps/hachimi/src/core/modules/: mod.rs
apps/hachimi/src/core/modules/training_tracker/: bond_progress.rs  build_profile.rs  career_meta.rs  chara_effects.rs  class_dump.rs  cm_model.rs  compat.rs  config.rs  course_data.rs  deck_bonuses.rs  diagnostics.rs  eval_data.rs  evaluation.rs  gametora_data.rs  hooks.rs  mod.rs  overlay_cache.rs  planner.rs  race_context.rs  recommend.rs  shop_hooks.rs  stat_targets.rs  tabs.rs  telemetry.rs  tracking_prefs.rs
apps/hachimi/src/core/modules/training_tracker/compat/: ui_mount.rs
apps/hachimi/src/core/modules/training_tracker/memory_reader/: chain.rs  command_info.rs  eval_master.rs  evaluations.rs  il2cpp.rs  mod.rs  reserve.rs  skills.rs  snapshot.rs  support_deck.rs
apps/hachimi/src/core/modules/training_tracker/memory_reader/scenario/: master_shop.rs
apps/hachimi/src/core/modules/training_tracker/skill_shop/: access.rs  il2cpp.rs  logic.rs  mod.rs  purchase.rs
apps/hachimi/src/core/modules/training_tracker/ui/: constants.rs  dimens.rs  dioxus_mount.rs  icons.rs  menu.rs  mod.rs  overlay.rs  skill_shop_tab.rs  snapshot.rs  textures.rs  util.rs
apps/hachimi/src/core/plugin/: api.rs  callback.rs  events.rs  hotkeys.rs  menu.rs  mod.rs  module.rs  notification.rs  overlay.rs  tab.rs  types.rs
apps/hachimi/src/il2cpp/hook/Plugins/AnimateToUnity/: AnRoot.rs
apps/hachimi/src/il2cpp/hook/UnityEngine_CoreModule/: Screen.rs  mod.rs
apps/hachimi/src/il2cpp/hook/umamusume/: GallopUtil.rs  LiveTheaterViewController.rs  NowLoading.rs  PartsSingleModeSkillListItem.rs  SceneManager.rs  SingleModeMainViewController.rs  StoryViewTextControllerLandscape.rs
apps/hachimi/src/il2cpp/hook/umamusume/PartsCommonHeaderTitle/: TitlePlayer.rs
apps/hachimi/src/windows/: diagnostics.rs  hachimi_impl.rs  main.rs  mod.rs  utils.rs  wnd_hook.rs
apps/hachimi/src/windows/gui_impl/: input.rs  render_hook.rs
apps/installer/: .gitignore  Cargo.toml  README.md  build.rs
apps/installer/locales/: en-US.yml
apps/installer/src/: cli.rs  gui.rs  i18n.rs  installer.rs
crates/dioxus-egui/: Cargo.toml
crates/dioxus-egui/src/: lib.rs  renderer.rs  style.rs
crates/hachimi-plugin-abi/: Cargo.toml  README.md
crates/hachimi-plugin-abi/src/: lib.rs  log.rs  version.rs
crates/hachimi-plugin-abi/tests/: abi_layout.rs
crates/hachimi-plugin-macros/: Cargo.toml
crates/hachimi-plugin-macros/src/: lib.rs
crates/hachimi-plugin-sdk/: Cargo.toml  README.md
crates/hachimi-plugin-sdk/src/: gui.rs  hook.rs  il2cpp.rs  lib.rs  mount.rs  sdk.rs  version.rs  widgets.rs
crates/honse-ui/: Cargo.toml
crates/honse-ui/src/: badge.rs  button.rs  card.rs  combo.rs  components.rs  field.rs  image.rs  lib.rs  scroll.rs  separator.rs  slider.rs  tabs.rs  theme.rs  toggle.rs  window.rs
crates/honse-ui/tests/: components.rs
plugins/debug-viewer/: Cargo.toml
plugins/debug-viewer/src/: hooks.rs  lib.rs  ui.rs
plugins/training-tracker/: Cargo.toml
plugins/training-tracker/assets/: course_params.json  skill_grades.json
plugins/training-tracker/docs/: developing.md
plugins/training-tracker/examples/: overlay_preview.rs
plugins/training-tracker/src/: build_profile.rs  career_meta.rs  chara_effects.rs  class_dump.rs  cm_model.rs  config.rs  course_data.rs  deck_bonuses.rs  dev_harness.rs  diagnostics.rs  gametora_data.rs  hooks.rs  lib.rs  memory_reader.rs  overlay_cache.rs  overlay_prefs.rs  planner.rs  recommend.rs  shop_hooks.rs  skill_shop.rs  stat_targets.rs  tabs.rs  tracker.rs  ui.rs
plugins/training-tracker/src/memory_reader/: chain.rs  command_info.rs  evaluations.rs  il2cpp.rs  mod.rs  reserve.rs  skills.rs  snapshot.rs
plugins/training-tracker/src/skill_shop/: access.rs  il2cpp.rs  logic.rs
plugins/training-tracker/src/ui/: bonds.rs  constants.rs  dioxus_mount.rs  icons.rs  menu.rs  mod.rs  overlay.rs  skill_shop_tab.rs  skills.rs  snapshot.rs  state.rs  textures.rs  util.rs
plugins/training-tracker/src/ui/career/: bonds.rs  header.rs  mod.rs  skills.rs  theme.rs  training.rs
plugins/training-tracker/src/ui/scenario/: mod.rs  trackblazer.rs
plugins/training-tracker/src/ui/training/: footer.rs  mod.rs  overview.rs  stats_grid.rs
tools/course-data/: Cargo.toml
tools/course-data/src/: main.rs
tools/icons-manifest/: Cargo.toml
tools/icons-manifest/src/: main.rs
(+146 files in other folders)
