[workspace]
resolver = "2"
members = [
    "apps/hachimi",
    "apps/installer",
    "crates/hachimi-plugin-abi",
    "crates/hachimi-plugin-sdk",
    "crates/hachimi-plugin-macros",
    "plugins/training-tracker",
    "plugins/debug-viewer",
    "plugins/race-hud",
    "tools/gametora-sync",
    "tools/fetch-master-db",
    "tools/skill-grades",
]
# The installer is built explicitly (`-p hachimi_installer`) after its embedded
# artifacts are staged. Keep it out of the default set so bare cargo
# check/clippy/test/build (CI + dev) don't try to compile it without those files.
default-members = [
    "apps/hachimi",
    "crates/hachimi-plugin-abi",
    "crates/hachimi-plugin-sdk",
    "crates/hachimi-plugin-macros",
    "plugins/training-tracker",
    "plugins/debug-viewer",
    "plugins/race-hud",
    "tools/gametora-sync",
    "tools/fetch-master-db",
    "tools/skill-grades",
]

# Shared metadata inherited by members via `<field>.workspace = true`.
# Versions stay per-crate (they differ); installer overrides license to MIT.
[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jalbarrang/hachimi-redux"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1

[profile.dev]
debug = "limited"

# Keep [patch.crates-io] as the LAST section: the release workflow appends egui
# path patches to the end of this file, and they must land under this table.
[patch.crates-io]
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }
