[workspace]
resolver = "2"
members = [
    "apps/hachimi",
    "apps/installer",
    "crates/hachimi-plugin-abi",
    "crates/hachimi-plugin-sdk",
    "crates/hachimi-plugin-macros",
    "crates/hachimi-telemetry",
    "plugins/debug-viewer",
    "plugins/race-hud",
    "tools/gametora-sync",
    "tools/fetch-master-db",
    "tools/skill-grades",
    "tools/course-data",
    "tools/tracker-data-manifest",
]
# The installer is built explicitly (`-p hachimi_installer`) after its embedded
# artifacts are staged. Keep it out of the default set so bare cargo
# check/clippy/test/build (CI + dev) don't try to compile it without those files.
default-members = [
    "apps/hachimi",
    "crates/hachimi-plugin-abi",
    "crates/hachimi-plugin-sdk",
    "crates/hachimi-plugin-macros",
    "crates/hachimi-telemetry",
    "plugins/debug-viewer",
    "plugins/race-hud",
    "tools/gametora-sync",
    "tools/fetch-master-db",
    "tools/skill-grades",
    "tools/course-data",
    "tools/tracker-data-manifest",
]

# Shared metadata inherited by members via `<field>.workspace = true`.
# Versions stay per-crate (they differ); installer overrides license to MIT.
[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jalbarrang/hachimi-redux"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1

[profile.dev]
debug = "limited"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
non_ascii_idents = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

# Keep [patch.crates-io] as the LAST section: the release workflow appends egui
# path patches to the end of this file, and they must land under this table.
[patch.crates-io]
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }
egui-directx11 = { git = "https://github.com/jalbarran-series/egui-directx11.git", rev = "bc05ae3326a4bab419c768e9dffb0d576d942c2b" }
egui = { git = "https://github.com/emilk/egui.git", rev = "7288e4b2e5a305b239d0b16bbbed239bf56e64b4" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "7288e4b2e5a305b239d0b16bbbed239bf56e64b4", package = "egui_extras" }
