[package]
name = "dioxus-egui"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Render a Dioxus VirtualDom to egui via egui_taffy (immediate-mode backend)"
publish = false

[dependencies]
egui = { version = "0.34", default-features = false }
egui_taffy = "=0.12.0"
dioxus = { version = "0.7", default-features = false, features = [
    "macro",
    "html",
    "signals",
    "hooks",
] }
dioxus-html = "0.7"

# Standalone window runner — not linked into the injected game DLL.
eframe = { version = "0.34", optional = true, default-features = false, features = [
    "default_fonts",
    "wgpu",
] }

[features]
default = []
# Exposes `DioxusEgui::{dump, buttons, inputs}` for headless tests.
introspect = []
# eframe::run_native + `run()` helper for dev harnesses and gallery binaries.
standalone = ["dep:eframe"]

[lints]
workspace = true
