[package]
name = "hachimi-plugin-macros"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Proc-macros for authoring Hachimi plugins (#[hachimi_plugin])"
repository = "https://github.com/kairusds/Hachimi-Edge"
keywords = ["hachimi", "plugin", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
# Distributed via git tags (sdk-vX.Y.Z), not a registry. Block accidental publishes.
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
