[package]
name = "hachimi-plugin-sdk"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Ergonomic SDK for Hachimi plugins (Sdk, ApiVersion, safe wrappers)"
repository = "https://github.com/kairusds/Hachimi-Edge"
keywords = ["hachimi", "plugin", "sdk", "egui"]
categories = ["game-development", "api-bindings"]
# Distributed via git tags (sdk-vX.Y.Z), not a registry. Block accidental publishes.
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
hachimi-plugin-abi = { path = "../hachimi-plugin-abi", version = "0.1.0" }
hachimi-plugin-macros = { path = "../hachimi-plugin-macros", version = "0.1.0" }
egui = { version = "0.33.3", default-features = false }

[lints.rust]
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
not_unsafe_ptr_arg_deref = "allow"
as_underscore = "allow"
ptr_as_ptr = "allow"
