[package]
name = "honse_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
egui = { version = "0.34", default-features = false }
egui_extras = { version = "0.34", default-features = false }
egui_taffy = "=0.12.0"
taffy = "0.9.2"

[lints]
workspace = true
