[package]
name = "honse_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# First-party crate; never published to a registry.
publish = false

[dependencies]
egui = { version = "0.34", default-features = false }
egui_taffy = "=0.12.0"

[lints]
workspace = true
