[package]
name = "hachimi-training-tracker"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Hachimi plugin that tracks training facility visits during career mode"

[lib]
name = "hachimi_training_tracker"
crate-type = ["cdylib", "lib"]

# ============================================================================
# Lint Configuration — mirrors core crate policy
# CI runs `clippy -- -D warnings` so all warns become errors in pipeline.
# ============================================================================
[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "deny"
unnecessary_transmutes = "allow"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Safety-critical
undocumented_unsafe_blocks = "warn"
transmute_ptr_to_ref = "warn"

# Anti-AI-slop
unwrap_in_result = "allow"
panic_in_result_fn = "allow"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
implicit_clone = "warn"

# IL2CPP FFI patterns — allow inherent unsafe patterns
as_underscore = "allow"
fn_to_numeric_cast = "allow"
fn_to_numeric_cast_any = "allow"
ptr_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
needless_pass_by_value = "allow"
missing_safety_doc = "allow"
missing_transmute_annotations = "allow"
useless_transmute = "allow"
transmute_undefined_repr = "allow"
type_complexity = "allow"
len_without_is_empty = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

# Explicitly allow
module_name_repetitions = "allow"
too_many_arguments = "allow"
wildcard_imports = "allow"
cast_lossless = "allow"
used_underscore_binding = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[features]
# Desktop preview harness: pulls in eframe so the overlay can be rendered in a
# native window with mocked career data, with no game/IL2CPP/SDK involved. Never
# enabled for the shipped cdylib — only `cargo run --example overlay_preview
# --features dev-harness`.
dev-harness = ["dep:eframe"]

[[example]]
name = "overlay_preview"
required-features = ["dev-harness"]

[dependencies]
# Standalone egui app runner — only compiled for the dev-harness preview, kept out
# of the cdylib. Same egui 0.33.x as the host SDK so the `Ui` type unifies.
eframe = { version = "0.33", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
] }
# Flexbox/grid layout for egui (Taffy engine). Pinned to the release that targets
# egui 0.33 so it unifies with the host's egui (a mismatched egui would break the
# shared Ui type across the host↔plugin boundary).
egui_taffy = "=0.10.0"
hachimi-plugin-abi = { path = "../../crates/hachimi-plugin-abi", version = "0.1.0" }
hachimi-plugin-sdk = { path = "../../crates/hachimi-plugin-sdk", version = "0.1.0" }
hachimi-telemetry = { path = "../../crates/hachimi-telemetry", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17"
